[gd_scene load_steps=5 format=3 uid="uid://b6eavbvcua5hk"]

[ext_resource type="Script" path="res://view/game/game.gd" id="1_dhpwo"]
[ext_resource type="PackedScene" uid="uid://dis1cx3bi13xh" path="res://component/leaderboard/leaderboard.tscn" id="3_vpl7a"]
[ext_resource type="PackedScene" uid="uid://cpmsnc8fuugqe" path="res://component/logger/logger.tscn" id="4_8v2iv"]
[ext_resource type="Texture2D" uid="uid://dyo2iothubrem" path="res://assets/background.svg" id="4_nyaor"]

[node name="Game" type="Node2D"]
script = ExtResource("1_dhpwo")

[node name="ParallaxBackground" type="Parallax2D" parent="."]
repeat_size = Vector2(12000, 12000)
repeat_times = 2

[node name="Background" type="Sprite2D" parent="ParallaxBackground"]
texture_repeat = 2
texture = ExtResource("4_nyaor")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 12000, 12000)

[node name="World" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Gui" type="CanvasLayer" parent="."]

[node name="GuiInputEventReferenceRect" type="ReferenceRect" parent="Gui"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Gui"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Gui/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Gui/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LogoutButton" type="Button" parent="Gui/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Logout"

[node name="ChatEdit" type="LineEdit" parent="Gui/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Chat..."

[node name="SendChatButton" type="Button" parent="Gui/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Send"

[node name="Leaderboard" parent="Gui/MarginContainer/VBoxContainer" instance=ExtResource("3_vpl7a")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
size_flags_horizontal = 8

[node name="Logger" parent="Gui/MarginContainer/VBoxContainer" instance=ExtResource("4_8v2iv")]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 10

[node name="ShowServerPositionCheck" type="CheckButton" parent="Gui"]
unique_name_in_owner = true
offset_left = 16.0
offset_top = 64.0
offset_right = 226.0
offset_bottom = 95.0
text = "Show server position"
